# python-project-52

./: .env  .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: lint.yml
statuses/: views.py
task_manager/: __init__.py  admin.py  settings.py  urls.py  views.py
task_manager/labels/: models.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py  0002_alter_label_name.py
task_manager/login/: apps.py  forms.py  urls.py  views.py
task_manager/statuses/: admin.py  models.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_alter_status_name.py
task_manager/tasks/: filters.py  models.py  url.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_task_author_task_executor_task_labels_task_status.py  0003_alter_task_executor_alter_task_labels_and_more.py  0004_alter_task_author_alter_task_description_and_more.py
task_manager/templates/: base.html  index.html
task_manager/templates/labels/: create.html  delete.html  list.html  update.html
task_manager/templates/login/: login.html
task_manager/templates/statuses/: create.html  delete.html  list.html  update.html
task_manager/templates/tasks/: create.html  delete.html  list.html  update.html  view.html
task_manager/templates/users/: all_users.html  create.html  delete.html  list.html  update.html
task_manager/users/: admin.py  forms.py  models.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py
