[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["pyhton-delevoper <viktorov.vadimka@gmail.com>"]
readme = "README.md"
packages = [{include = "hexlet_code"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
